--- a/src/components/AddTask/addTask.module.css
+++ b/src/components/AddTask/addTask.module.css
@@ -1,3 +1,24 @@
-.addTask {
-  /* Sample */
+
+.inputForm{
+  width: 90%;
+  padding: 15px;
+  font-size: 20px;
+  font-weight: 700;
+  color: rgba(55, 53, 53, 0.626);
+  border: none;
+  background: transparent;
+}
+.addBtn{
+    width: 10%;
+    margin-top: 5px;
+    font-size: 30px;
+    border:none;
+    font-weight: 900;
+    cursor: pointer;
+    color: blue;
+    background: transparent;
+}
+
+.addBtn:hover{
+  color: black;
 }
