--- a/src/components/taskApp.module.css
+++ b/src/components/taskApp.module.css
@@ -1,3 +1,10 @@
 .taskApp {
   /* Sample */
+  width: 30%;
+  height: 500px;
+  /* border: 1px solid red; */
+  margin: auto;
+  margin-top: 50px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 20px;
 }
